unpackaged/main/default/objects/n2de__Distribution_log__c/n2de__Distribution_log__c.object-meta.xml
<CustomObject>
    <description>Distribution logs</description>
    <label>Distribution log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>