unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Account__c.field-meta.xml
<CustomField>
    <fullName>n2de__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Distribution logs</relationshipLabel>
    <relationshipName>Distribution_logs</relationshipName>
    <type>Lookup</type>
</CustomField>