unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Actions_complete__c.field-meta.xml
<CustomField>
    <fullName>n2de__Actions_complete__c</fullName>
    <label>Actions complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>