unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Alert_tip__c.field-meta.xml
<CustomField>
    <fullName>n2de__Alert_tip__c</fullName>
    <label>Alert tip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>