unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assign_by_status_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_by_status_field_name__c</fullName>
    <label>Status Field for Assign by Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>