unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assign_by_status_ready_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_by_status_ready_value__c</fullName>
    <inlineHelpText>Value of the Ready for distribution status at the point of assignment</inlineHelpText>
    <label>Ready for distribution Status value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>