unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assign_to_field__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assign_to_field__c</fullName>
    <label>Assign to field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>