unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assigned_object__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_object__c</fullName>
    <inlineHelpText>Assigned object name.</inlineHelpText>
    <label>Assigned object</label>
    <length>60</length>
    <type>Text</type>
</CustomField>