unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assigned_object_Id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_object_Id__c</fullName>
    <label>Assigned object Id (Deprecated)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>