unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assigned_object_id_index__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_object_id_index__c</fullName>
    <externalId>true</externalId>
    <label>Assigned object id index</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>