unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assigned_object_record_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_object_record_name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>