unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assigned_owner_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_owner_name__c</fullName>
    <formula>IF(ISBLANK(n2de__Owner_name__c),n2de__Distribution_team_member__r.n2de__User__r.FirstName + IF(AND(NOT(ISBLANK(n2de__Distribution_team_member__r.n2de__User__r.FirstName)), NOT(ISBLANK(n2de__Distribution_team_member__r.n2de__User__r.LastName))), &quot; &quot;, &quot;&quot;) + n2de__Distribution_team_member__r.n2de__User__r.LastName,n2de__Owner_name__c)</formula>
    <label>Resolved Assigned owner name</label>
    <type>Text</type>
</CustomField>