unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Assignment_attempt_count__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assignment_attempt_count__c</fullName>
    <label>Number of saving attempts made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>