unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Day__c.field-meta.xml
<CustomField>
    <fullName>n2de__Day__c</fullName>
    <formula>DAY( DATEVALUE(n2de__Assignment_date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>