unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Detail_message__c.field-meta.xml
<CustomField>
    <fullName>n2de__Detail_message__c</fullName>
    <description>Used to store extra info about the specific assignment, to be used on the distribution log page in tooltips.</description>
    <label>Detail message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>