unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Distributed_record_value__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributed_record_value__c</fullName>
    <inlineHelpText>The numeric value of the record being distributed, where the record is active capped or load balanced by value rather than record count</inlineHelpText>
    <label>Distributed record value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>