unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Distribution_number__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_number__c</fullName>
    <description>What number assignment this is of the particular record. Only available for lead, opportunity, contact, account and case assignments.</description>
    <label>Distribution number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>