unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Distribution_Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_Team__c</fullName>
    <formula>IF(ISBLANK(n2de__Distribution_team_name__c),n2de__Distributor__r.n2de__Team__r.Name,n2de__Distribution_team_name__c)</formula>
    <label>Team</label>
    <type>Text</type>
</CustomField>