unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Distribution_team_member__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_team_member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team member</label>
    <referenceTo>n2de__Team_member__c</referenceTo>
    <relationshipLabel>Distribution logs</relationshipLabel>
    <relationshipName>Distribution_logs</relationshipName>
    <type>Lookup</type>
</CustomField>