unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Distributor_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor_name__c</fullName>
    <label>Distributor name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>