unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Distributor_schedule_log__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distributor_schedule_log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor schedule log</label>
    <referenceTo>n2de__Distributor_schedule_log__c</referenceTo>
    <relationshipLabel>Distribution logs (Schedule log)</relationshipLabel>
    <relationshipName>Distribution_schedule_logs</relationshipName>
    <type>Lookup</type>
</CustomField>