unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Field_to_update_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Field_to_update_name__c</fullName>
    <label>Field to update (Deprecated)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>