unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__First_assignment_attempt_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__First_assignment_attempt_date__c</fullName>
    <label>First assignment attempt date</label>
    <type>DateTime</type>
</CustomField>