unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__In_alert__c.field-meta.xml
<CustomField>
    <fullName>n2de__In_alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA alert</label>
    <type>Checkbox</type>
</CustomField>