unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__In_error__c.field-meta.xml
<CustomField>
    <fullName>n2de__In_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>