unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Is_criteria_cap_count_increased__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_criteria_cap_count_increased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criteria Cap count increased</label>
    <type>Checkbox</type>
</CustomField>