unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Is_last_action_complete__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_last_action_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last action complete</label>
    <type>Checkbox</type>
</CustomField>