unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Is_object_sync_enabled_log__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_object_sync_enabled_log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Object sync is enabled</label>
    <type>Checkbox</type>
</CustomField>