unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Is_reassigned_to_queue__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_reassigned_to_queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-assigned</label>
    <type>Checkbox</type>
</CustomField>