unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Is_related_owner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_related_owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is related owner</label>
    <type>Checkbox</type>
</CustomField>