unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Is_substitute__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_substitute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is substitute</label>
    <type>Checkbox</type>
</CustomField>