unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Last_action_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Last_action_sequence__c</fullName>
    <label>Last action sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>