unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Lead__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Distribution logs</relationshipLabel>
    <relationshipName>Distribution_logs</relationshipName>
    <type>Lookup</type>
</CustomField>