unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Next_attempt_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Next_attempt_date__c</fullName>
    <label>When next assignment attempt is allowed</label>
    <type>DateTime</type>
</CustomField>