unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Object_specific_distribution_sequence__c.field-meta.xml
<CustomField>
    <fullName>n2de__Object_specific_distribution_sequence__c</fullName>
    <label>Object-specific distribution sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>