unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Owner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>N.B: List page usage only, no data populated</description>
    <label>Assigned user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distribution_logs</relationshipName>
    <type>Lookup</type>
</CustomField>