unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Owner_queue__c.field-meta.xml
<CustomField>
    <fullName>n2de__Owner_queue__c</fullName>
    <label>Assigned queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>