unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Previous_owner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Previous_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>N.B: List page usage only, no data populated</description>
    <label>Owner user before assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Previous_owner_distribution_logs</relationshipName>
    <type>Lookup</type>
</CustomField>