unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Reassigned_to_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reassigned_to_id__c</fullName>
    <label>Re-assigned to id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>