unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Reassignment_date__c.field-meta.xml
<CustomField>
    <fullName>n2de__Reassignment_date__c</fullName>
    <label>Reassignment date</label>
    <type>DateTime</type>
</CustomField>