unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Status_on_assignment__c.field-meta.xml
<CustomField>
    <fullName>n2de__Status_on_assignment__c</fullName>
    <description>Object status at the point of assignment (before any status update)</description>
    <label>Status on assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>