unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Sticky_creator__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_creator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sticky creator</label>
    <type>Checkbox</type>
</CustomField>