unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Sticky_match_level__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_match_level__c</fullName>
    <label>Sticky match level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>