unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Sticky_unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>n2de__Sticky_unique_identifier__c</fullName>
    <label>Unique identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>