unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Time_to_action_mins__c.field-meta.xml
<CustomField>
    <fullName>n2de__Time_to_action_mins__c</fullName>
    <inlineHelpText>The time taken between this object being distributed to a team member and being actioned, in minutes.</inlineHelpText>
    <label>Time to action mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>