unpackaged/main/default/objects/n2de__Distribution_log__c/fields/n2de__Used_weighting_in_hand__c.field-meta.xml
<CustomField>
    <fullName>n2de__Used_weighting_in_hand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weighting-in-hand was used</label>
    <type>Checkbox</type>
</CustomField>